fix: docbot overflow and scrolling

--- a/docs/_static/docbot.css
+++ b/docs/_static/docbot.css
@@ -175,7 +175,7 @@
 }
 
 .ready .hidden-before-ready{
-    display: unset;
+    display: revert;
 }
 
 @media (prefers-color-scheme: dark) {
